force-app/main/default/objects/Sales_Lead_Team__c/Sales_Lead_Team__c.object-meta.xml
<CustomObject>
    <label>Sales Lead Team</label>
    <nameField>
        <displayFormat>SLT-{00000}</displayFormat>
        <label>Sales Lead Team No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Lead Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>