force-app/main/default/objects/Sales_Lead_Team__c/fields/Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Lead__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sales Lead</label>
    <referenceTo>Sales_Lead__c</referenceTo>
    <relationshipLabel>Sales Lead Team</relationshipLabel>
    <relationshipName>Sales_Lead_Team</relationshipName>
    <type>Lookup</type>
</CustomField>