force-app/main/default/objects/Sales_Lead_Team__c/fields/SalesLead_TeamMember__c.field-meta.xml
<CustomField>
    <fullName>SalesLead_TeamMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Lead Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Lead_Team</relationshipName>
    <type>Lookup</type>
</CustomField>