force-app/main/default/objects/Sales_Lead_Team__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proposal PM</fullName>
            </value>
            <value>
                <fullName>Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sales Manager</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Channel Manager</fullName>
            </value>
            <value>
                <fullName>Executive Sponsor</fullName>
            </value>
            <value>
                <fullName>Lead Qualifier</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Strategy Committee Officer</fullName>
            </value>
            <value>
                <fullName>Strategy Committee Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>